--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 		<title>W E L C O M E</title>
 		<meta content="The People's Land of Learning" property="og:title"/>
 		<meta content="An educational resource for Anti-Colonial Marxist Leninist and Feminist theory" property="og:description"/>
-		<meta content="" property="og:url"/>
+		<meta content="https://peopleslandoflearning.github.io/" property="og:url"/>
 		<meta content="assets/icon.png" property="og:image"/>
 		<meta content="#ab5675" data-react-helmet="true" name="theme-color"/>
 		<link href="style.css" rel="stylesheet" type="text/css" media="all">
   	</head>
  	<body>
 		<header>
-			<a href=""><h1>The People's Land of Learning</h1></a>
+			<a href="https://peopleslandoflearning.github.io/" id="title"><h1>The People's Land of Learning</h1></a>
 			<p>An educational resource for Anti-Colonial Marxist Leninist and Feminist theory.</p>
 			<div id="buttonMenu">
 				<a class="button" href=""><p>DICTIONARY</p></a>
