--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 			<a href="https://peopleslandoflearning.github.io/" id="title"><h1>The People's Land of Learning</h1></a>
 			<p>An educational resource for Anti-Colonial Marxist Leninist and Feminist theory.</p>
 			<div id="buttonMenu">
-				<a class="button" href=""><p>DICTIONARY</p></a>
-				<a class="button" href=""><p>FEEDBACK</p></a>
-				<a class="button" href=""><p>LIBRARY</p></a>
-				<a class="button" href=""><p>RESOURCES</p></a>
+				<a class="button" href="pages/dictionary.html"><p>DICTIONARY</p></a>
+				<a class="button" href="pages/contact.html"><p>FEEDBACK</p></a>
+				<a class="button" href="pages/library/index.html"><p>LIBRARY</p></a>
+				<a class="button" href="pages/resources/index.html"><p>RESOURCES</p></a>
 			</div>
 			<hr/>
 		</header>
