--- a/index.html
+++ b/index.html
@@ -3,24 +3,24 @@
  	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="icon" type="image/x-icon" href="assets/icon.ico">
+		<link rel="icon" type="image/x-icon" href="/assets/icon.ico">
 		<title>W E L C O M E</title>
 		<meta content="The People's Land of Learning" property="og:title"/>
 		<meta content="An educational resource for Anti-Colonial Marxist Leninist and Feminist theory" property="og:description"/>
 		<meta content="https://peopleslandoflearning.github.io/" property="og:url"/>
-		<meta content="assets/icon.png" property="og:image"/>
+		<meta content="/assets/icon.png" property="og:image"/>
 		<meta content="#ab5675" data-react-helmet="true" name="theme-color"/>
-		<link href="style.css" rel="stylesheet" type="text/css" media="all">
+		<link href="/style.css" rel="stylesheet" type="text/css" media="all">
   	</head>
  	<body>
 		<header>
-			<a href="https://peopleslandoflearning.github.io/" id="title"><h1>The People's Land of Learning</h1></a>
+			<a href="/index.html" id="title"><h1>The People's Land of Learning</h1></a>
 			<p>An educational resource for Anti-Colonial Marxist Leninist and Feminist theory.</p>
 			<div id="buttonMenu">
-				<a class="button" href="pages/dictionary.html"><p>DICTIONARY</p></a>
-				<a class="button" href="pages/contact.html"><p>FEEDBACK</p></a>
-				<a class="button" href="pages/library/index.html"><p>LIBRARY</p></a>
-				<a class="button" href="pages/resources/index.html"><p>RESOURCES</p></a>
+				<a class="button" href="/pages/dictionary.html"><p>DICTIONARY</p></a>
+				<a class="button" href="/pages/contact.html"><p>FEEDBACK</p></a>
+				<a class="button" href="/pages/library/index.html"><p>LIBRARY</p></a>
+				<a class="button" href="/pages/resources/index.html"><p>RESOURCES</p></a>
 			</div>
 			<hr/>
 		</header>
