--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   	</head>
  	<body>
 		<header>
-			<a href="/index.html" id="title"><h1>The People's Land of Learning</h1></a>
+			<a href="/" id="title"><h1>The People's Land of Learning</h1></a>
 			<p>An educational resource for Anti-Colonial Marxist Leninist and Feminist theory.</p>
 			<div id="buttonMenu">
 				<a class="button" href="/pages/dictionary.html"><p>DICTIONARY</p></a>
@@ -30,18 +30,18 @@
 			<p>- Frantz Fanon, The Wretched of The Earth</p>
 			<h3>Theory Guides</h3>
 			<ul>
-				<a href=""><li>Colonialism and Imperialism</li></a>
-				<a href=""><li>Feminism and Gender Liberation</li></a>
-				<a href=""><li>Introductory Marxist Theory</li></a>
-				<a href=""><li>Organizing</li></a>
-				<a href=""><li>Security</li></a>
+				<a href="/guides/colonialism.html"><li>Colonialism and Imperialism</li></a>
+				<a href="/guides/feminism.html"><li>Feminism and Gender Liberation</li></a>
+				<a href="/guides/marxism.html"><li>Introductory Marxist Theory</li></a>
+				<a href="/guides/organizing.html"><li>Organizing</li></a>
+				<a href="/guides/security.html"><li>Security</li></a>
 			</ul>
 			<h3>Specific Topics</h3>
 			<ul>
-				<a href=""><li>Indonesia</li></a>
-				<a href=""><li>Puerto Rico</li></a>
-				<a href=""><li>The DRPK</li></a>
-				<a href=""><li>The US as a Settler Empire</li></a>
+				<a href="/topics/indonesia.html"><li>Indonesia</li></a>
+				<a href="/topics/pr.html"><li>Puerto Rico</li></a>
+				<a href="/topics/dprk.html"><li>The DRPK</li></a>
+				<a href="/topics/ussettler.html"><li>The US as a Settler Empire</li></a>
 			</ul>
 		</div>
 		<footer>
