--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
 			<p>- Frantz Fanon, The Wretched of The Earth</p>
 			<h3>Theory Guides</h3>
 			<ul>
-				<a href="/guides/colonialism.html"><li>Colonialism and Imperialism</li></a>
-				<a href="/guides/feminism.html"><li>Feminism and Gender Liberation</li></a>
-				<a href="/guides/marxism.html"><li>Introductory Marxist Theory</li></a>
-				<a href="/guides/organizing.html"><li>Organizing</li></a>
-				<a href="/guides/security.html"><li>Security</li></a>
+				<a href="/pages/guides/colonialism.html"><li>Colonialism and Imperialism</li></a>
+				<a href="/pages/guides/feminism.html"><li>Feminism and Gender Liberation</li></a>
+				<a href="/pages/guides/marxism.html"><li>Introductory Marxist Theory</li></a>
+				<a href="/pages/guides/organizing.html"><li>Organizing</li></a>
+				<a href="/pages/guides/security.html"><li>Security</li></a>
 			</ul>
 			<h3>Specific Topics</h3>
 			<ul>
-				<a href="/topics/indonesia.html"><li>Indonesia</li></a>
-				<a href="/topics/pr.html"><li>Puerto Rico</li></a>
-				<a href="/topics/dprk.html"><li>The DRPK</li></a>
-				<a href="/topics/ussettler.html"><li>The US as a Settler Empire</li></a>
+				<a href="/pages/topics/indonesia.html"><li>Indonesia</li></a>
+				<a href="/pages/topics/pr.html"><li>Puerto Rico</li></a>
+				<a href="/pages/topics/dprk.html"><li>The DRPK</li></a>
+				<a href="/pages/topics/ussettler.html"><li>The US as a Settler Empire</li></a>
 			</ul>
 		</div>
 		<footer>
