--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 			<a href="/" id="title"><h1>The People's Land of Learning</h1></a>
 			<p>An educational resource for Anti-Colonial Marxist Leninist and Feminist theory.</p>
 			<div id="buttonMenu">
-				<a class="button" href="/pages/dictionary.html"><p>DICTIONARY</p></a>
-				<a class="button" href="/pages/contact.html"><p>FEEDBACK</p></a>
-				<a class="button" href="/pages/library/index.html"><p>LIBRARY</p></a>
-				<a class="button" href="/pages/resources/index.html"><p>RESOURCES</p></a>
+				<a class="button" href="/pages/dictionary"><p>DICTIONARY</p></a>
+				<a class="button" href="/pages/contact"><p>FEEDBACK</p></a>
+				<a class="button" href="/pages/library/index"><p>LIBRARY</p></a>
+				<a class="button" href="/pages/resources/index"><p>RESOURCES</p></a>
 			</div>
 			<hr/>
 		</header>
@@ -30,18 +30,18 @@
 			<p>- Frantz Fanon, The Wretched of The Earth</p>
 			<h3>Theory Guides</h3>
 			<ul>
-				<a href="/pages/guides/colonialism.html"><li>Colonialism and Imperialism</li></a>
-				<a href="/pages/guides/feminism.html"><li>Feminism and Gender Liberation</li></a>
-				<a href="/pages/guides/marxism.html"><li>Introductory Marxist Theory</li></a>
-				<a href="/pages/guides/organizing.html"><li>Organizing</li></a>
-				<a href="/pages/guides/security.html"><li>Security</li></a>
+				<a href="/pages/guides/colonialism"><li>Colonialism and Imperialism</li></a>
+				<a href="/pages/guides/feminism"><li>Feminism and Gender Liberation</li></a>
+				<a href="/pages/guides/marxism"><li>Introductory Marxist Theory</li></a>
+				<a href="/pages/guides/organizing"><li>Organizing</li></a>
+				<a href="/pages/guides/security"><li>Security</li></a>
 			</ul>
 			<h3>Specific Topics</h3>
 			<ul>
-				<a href="/pages/topics/indonesia.html"><li>Indonesia</li></a>
-				<a href="/pages/topics/pr.html"><li>Puerto Rico</li></a>
-				<a href="/pages/topics/dprk.html"><li>The DRPK</li></a>
-				<a href="/pages/topics/ussettler.html"><li>The US as a Settler Empire</li></a>
+				<a href="/pages/topics/indonesia"><li>Indonesia</li></a>
+				<a href="/pages/topics/pr"><li>Puerto Rico</li></a>
+				<a href="/pages/topics/dprk"><li>The DRPK</li></a>
+				<a href="/pages/topics/ussettler"><li>The US as a Settler Empire</li></a>
 			</ul>
 		</div>
 		<footer>
