--- a/pages/resources/index.html
+++ b/pages/resources/index.html
@@ -26,40 +26,40 @@
 		</header>
 		<div class="container">
 			<p>We are always searching for more resources to add, so please <a href="https://github.com/peopleslandoflearning/peopleslandoflearning.github.io/issues">suggest</a> any you find and we shall add them here!</p>
-			<div class="container">
+			<div class="textGroup">
 				<a href="libraries"><h2>Additional Libraries</h2></a>
 				<p>Other places to find resources, both online and offline.</p>
 			</div>
-			<div class="container">
+			<div class="textGroup">
 				<a href="donation"><h2>Donation Links</h2></a>
 				<p>Links to donate to comrades in need.</p>
 			</div>
-			<div class="container">
+			<div class="textGroup">
 				<a href="feministres"><h2>Feminist Resources</h2></a>
 				<p>Resources relating to feminist issues.</p>
 			</div>
-			<div class="container">
+			<div class="textGroup">
 				<a href="queerres"><h2>LGBTQA+ Resources</h2></a>
 				<p>Trans and general LGBTQA+ resources.</p>
 			</div>
-			<div class="container">
+			<div class="textGroup">
 				<a href="news"><h2>News Sites</h2></a>
 				<p>Sources for news from a socialist perspective.</p>
 			</div>
-			<div class="container">
+			<div class="textGroup">
 				<a href="orgs"><h2>Organizations</h2></a>
 				<p>Organizations, listed by country.</p>
 			</div>
-			<div class="container">
+			<div class="textGroup">
 				<a href="security"><h2>Security</h2></a>
 				<p>Resources on security, self defense, etc.</p>
 			</div>
-			<div class="container">
+			<div class="textGroup">
 				<a href="socialmedia"><h2>Social Media</h2></a>
 				<p>Anti-colonial, feminist, and socialist educational resources on various platforms, sorted in alphabetical order by platform.</p>
 			</div>
 			<hr/>
-			<div class="container">
+			<div class="textGroup">
 				<h2>Misc Resources</h2>
 				<p>https://blacklivesmatters.carrd.co/</p>
 				<p>https://blackliveswillalwaysmatter.carrd.co/</p>
