--- a/pages/resources/index.html
+++ b/pages/resources/index.html
@@ -61,10 +61,10 @@
 			<hr/>
 			<div class="textGroup">
 				<h2>Misc Resources</h2>
-				<p>https://blacklivesmatters.carrd.co/</p>
-				<p>https://blackliveswillalwaysmatter.carrd.co/</p>
-				<p>https://saytheirnames.carrd.co/</p>
-				<p>https://yemencrisis.carrd.co/</p>
+				<a href="https://blacklivesmatters.carrd.co/"><p>https://blacklivesmatters.carrd.co/</p></a>
+				<a href="https://blackliveswillalwaysmatter.carrd.co/"><p>https://blackliveswillalwaysmatter.carrd.co/</p></a>
+				<a href="https://saytheirnames.carrd.co/"><p>https://saytheirnames.carrd.co/</p></a>
+				<a href="https://yemencrisis.carrd.co/"><p>https://yemencrisis.carrd.co/</p></a>
 			</div>
 		</div>
 		<footer>
