--- a/index.html
+++ b/index.html
@@ -28,21 +28,27 @@
 			<h3 id="temp">THIS IS VERY MUCH A WORK IN PROGRESS</h3>
 			<p class="quote">"To politicize the masses is not and cannot be to make a political speech. It means driving home to the masses that everything depends on them, that if we stagnate the fault is theirs, and that if we progress, they too are responsible, that there is no demiurge, no illustrious man taking responsibility for everything, but that the demiurge is the people and the magic lies in their hands and their hands alone."</p>
 			<p>- Frantz Fanon, The Wretched of The Earth</p>
-				<div class="textGroup">
-					<h3>Theory Guides</h3>
-					<a href="/pages/guides/colonialism"><p>Colonialism and Imperialism</p></a>
-					<a href="/pages/guides/feminism"><p>Feminism and Gender Liberation</p></a>
-					<a href="/pages/guides/marxism"><p>Introductory Marxist Theory</p></a>
-					<a href="/pages/guides/organizing"><p>Organizing</p></a>
-					<a href="/pages/guides/security"><p>Security</p></a>
-				</div>
-				<div class="textGroup">
-					<h3>Specific Topics</h3>
-					<a href="/pages/topics/indonesia"><p>Indonesia</p></a>
-					<a href="/pages/topics/pr"><p>Puerto Rico</p></a>
-					<a href="/pages/topics/dprk"><p>The DRPK</p></a>
-					<a href="/pages/topics/ussettler"><p>The US as a Settler Empire</p></a>
-				</div>
+			<!-- Topic adding template
+			<div class="textGroup">
+				<a href=""><h2>Category</h2></a>
+				<p>Subtitle</p>
+			</div>
+			-->
+			<div class="textGroup">
+				<h3>Theory Guides</h3>
+				<a href="/pages/guides/colonialism"><p>Colonialism and Imperialism</p></a>
+				<a href="/pages/guides/feminism"><p>Feminism and Gender Liberation</p></a>
+				<a href="/pages/guides/marxism"><p>Introductory Marxist Theory</p></a>
+				<a href="/pages/guides/organizing"><p>Organizing</p></a>
+				<a href="/pages/guides/security"><p>Security</p></a>
+			</div>
+			<div class="textGroup">
+				<h3>Specific Topics</h3>
+				<a href="/pages/topics/indonesia"><p>Indonesia</p></a>
+				<a href="/pages/topics/pr"><p>Puerto Rico</p></a>
+				<a href="/pages/topics/dprk"><p>The DRPK</p></a>
+				<a href="/pages/topics/ussettler"><p>The US as a Settler Empire</p></a>
+			</div>
 		</div>
 		<footer>
 			<hr/>
