--- a/pages/resources/index.html
+++ b/pages/resources/index.html
@@ -26,6 +26,12 @@
 		</header>
 		<div class="container">
 			<p>We are always searching for more resources to add, so please <a href="https://github.com/peopleslandoflearning/peopleslandoflearning.github.io/issues">suggest</a> any you find and we shall add them here!</p>
+			<!-- Category adding template
+			<div class="textGroup">
+				<a href=""><h2>Category</h2></a>
+				<p>Subtitle</p>
+			</div>
+			-->
 			<div class="textGroup">
 				<a href="libraries"><h2>Additional Libraries</h2></a>
 				<p>Other places to find resources, both online and offline.</p>
