--- a/pages/resources/libraries.html
+++ b/pages/resources/libraries.html
@@ -11,6 +11,7 @@
 		<meta content="/assets/icon.png" property="og:image"/>
 		<meta content="#ab5675" data-react-helmet="true" name="theme-color"/>
 		<link href="/style.css" rel="stylesheet" type="text/css" media="all">
+		<script src="/script.js"></script>
   	</head>
  	<body>
 		<header>
