--- a/pages/resources/orgs.html
+++ b/pages/resources/orgs.html
@@ -44,12 +44,12 @@
 			<div class="hidden">
 				<h2 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden2'))">Organizations by Country <span class="hiddenIcon">></span></h2>
 				<div id="hidden2" class="hiddenBody">
-					<a href="orgs/india"><h3 India</h3></a>
-					<a href="orgs/kenya"><h3 Kenya</h3></a>
-					<a href="orgs/philippines"><h3 Philippines</span></h3></a>
-					<a href="orgs/pr"><h3 Puerto Rico</h3></a>
-					<a href="orgs/swaziland"><h3 Swaziland</h3></a>
-					<a href="orgs/us"><h3 U.S.</h3></a>
+					<a href="orgs/india"><p>India</p></a>
+					<a href="orgs/kenya"><p>Kenya</p></a>
+					<a href="orgs/philippines"><p>Philippines</span></p></a>
+					<a href="orgs/pr"><p>Puerto Rico</p></a>
+					<a href="orgs/swaziland"><p> waziland</p></a>
+					<a href="orgs/us"><p>U.S.</p></a>
 				</div>
 			</div>
 		</div>
