--- a/pages/resources/orgs.html
+++ b/pages/resources/orgs.html
@@ -48,7 +48,7 @@
 					<a href="orgs/kenya"><p>Kenya</p></a>
 					<a href="orgs/philippines"><p>Philippines</span></p></a>
 					<a href="orgs/pr"><p>Puerto Rico</p></a>
-					<a href="orgs/swaziland"><p> waziland</p></a>
+					<a href="orgs/swaziland"><p>Swaziland</p></a>
 					<a href="orgs/us"><p>U.S.</p></a>
 				</div>
 			</div>
