--- a/pages/resources/orgs/us.html
+++ b/pages/resources/orgs/us.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="icon" type="image/x-icon" href="/assets/icon.ico">
-		<title>U.S> Orgs</title>
+		<title>U.S. Orgs</title>
 		<meta content="The People's Land of Learning" property="og:title"/>
 		<meta content="An educational resource for Anti-Colonial Marxist Leninist and Feminist theory" property="og:description"/>
 		<meta content="https://peopleslandoflearning.github.io/pages/resources/orgs/us" property="og:url"/>
@@ -150,7 +150,7 @@
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden2-14'))"Mississippi <span class="hiddenIcon">></span></h3>
+						<h3 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden2-14'))">Mississippi <span class="hiddenIcon">></span></h3>
 						<div id="hidden2-14" class="hiddenBody">
 							<a href="https://cooperationjackson.org/"><p>Cooperation Jackson</p></a>
 						</div>
