--- a/pages/resources/socialmedia.html
+++ b/pages/resources/socialmedia.html
@@ -167,22 +167,22 @@
 					</div>
 					-->
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden5-'))">Art <span class="hiddenIcon">></span></h3>
-						<div id="hidden5-" class="hiddenBody">
+						<h3 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden7-1'))">Art <span class="hiddenIcon">></span></h3>
+						<div id="hidden7-1" class="hiddenBody">
 							<a href="https://twitter.com/communistposter/"><p>@communistposter</p></a>
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden5-'))">History <span class="hiddenIcon">></span></h3>
-						<div id="hidden5-" class="hiddenBody">
+						<h3 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden7-2'))">History <span class="hiddenIcon">></span></h3>
+						<div id="hidden7-2" class="hiddenBody">
 							<a href="https://twitter.com/leftinthebay"><p>@leftinthebay</p></a>
 							<a href="https://twitter.com/inthespirit"><p>@inthespirit</p></a>
 							<a href="https://twitter.com/blktransarchives"><p>@blktransarchives</p></a>
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden7-'))">News <span class="hiddenIcon">></span></h3>
-						<div id="hidden7-" class="hiddenBody">
+						<h3 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden7-3'))">News <span class="hiddenIcon">></span></h3>
+						<div id="hidden7-3" class="hiddenBody">
 							<a href="https://twitter.com/theintlmagz"><p>@theintlmagz</p></a>
 							<a href="https://twitter.com/thecadrejournal"><p>@thecadrejournal</p></a>
 							<a href="https://twitter.com/joshuapotash"><p>@joshuapotash</p></a>
@@ -194,8 +194,8 @@
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden7-'))">Theory <span class="hiddenIcon">></span></h3>
-						<div id="hidden7-" class="hiddenBody">
+						<h3 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden7-4'))">Theory <span class="hiddenIcon">></span></h3>
+						<div id="hidden7-4" class="hiddenBody">
 							<a href="https://twitter.com/communistcenter"><p>@communistcenter</p></a>
 							<a href="https://twitter.com/nkrumahquotes"><p>@nkrumahquotes</p></a>
 							<a href="https://twitter.com/muslimahsamiyah"><p>@muslimahsamiyah</p></a>
