--- a/pages/resources/orgs/us.html
+++ b/pages/resources/orgs/us.html
@@ -28,15 +28,15 @@
 		<div class="container">
 			<!-- Hidden container template
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden1'))">Category <span class="hiddenIcon">></span></h2>
-				<div id="hidden1" class="hiddenBody">
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">></span></h2>
+				<div class="hiddenBody">
      				<a href=""><p>Resource Name</p></a>
 				</div>
 			</div>
 			-->
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden1'))">National <span class="hiddenIcon">></span></h2>
-				<div id="hidden1" class="hiddenBody">
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">National <span class="hiddenIcon">></span></h2>
+				<div class="hiddenBody">
 					<a href="https://www.americanpartyoflabor.com/"><p>American Party of Labor</p></a>
 					<a href="https://blackallianceforpeace.com/"><p>Black Alliance For Peace</p></a>
 					<a href="https://blackpeopleunited.ca/"><p>Black People United</p></a>
@@ -54,37 +54,37 @@
 				</div>
 			</div>
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden2'))">By State <span class="hiddenIcon">></span></h2>
-				<div id="hidden2" class="hiddenBody">
+				<h2 class="hiddenHead" onClick="this.nextElementSibling)">By State <span class="hiddenIcon">></span></h2>
+				<div class="hiddenBody">
 					<!-- Hidden subcontainer template
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden2-'))">Category <span class="hiddenIcon">></span></h3>
-						<div id="hidden2-" class="hiddenBody">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">></span></h3>
+						<div class="hiddenBody">
 							<a href=""><p>Resource Name</p></a>
 						</div>
 					</div>
 					-->
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden2-1'))">Alabama <span class="hiddenIcon">></span></h3>
-						<div id="hidden2-1" class="hiddenBody">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Alabama <span class="hiddenIcon">></span></h3>
+						<div class="hiddenBody">
 							<a href="https://www.facebook.com/pslbirmingham/"><p>PSL Birmingham</p></a>
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden2-2'))">Alaska <span class="hiddenIcon">></span></h3>
-						<div id="hidden2-2" class="hiddenBody">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Alaska <span class="hiddenIcon">></span></h3>
+						<div class="hiddenBody">
 							<a href="https://linktr.ee/pslanchorage/"><p>PSL Anchorage</p></a>
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden2-3'))">Arizona <span class="hiddenIcon">></span></h3>
-						<div id="hidden2-3" class="hiddenBody">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Arizona <span class="hiddenIcon">></span></h3>
+						<div class="hiddenBody">
 							<a href="https://twitter.com/pslphoenix/"><p>PSL Phoenix</p></a>
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden2-4'))">California <span class="hiddenIcon">></span></h3>
-						<div id="hidden2-4" class="hiddenBody">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">California <span class="hiddenIcon">></span></h3>
+						<div class="hiddenBody">
 							<a href="https://linktr.ee/lafuerzacsulb/"><p>La F.U.E.R.Z.A Student Association</p></a>
 							<a href="https://linktr.ee/PSL_LosAngeles/"><p>PSL Los Angeles</p></a>
 							<a href="https://linktr.ee/sacpsl/"><p>PSL Sacramento</p></a>
@@ -93,95 +93,95 @@
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden2-5'))">Colorado <span class="hiddenIcon">></span></h3>
-						<div id="hidden2-5" class="hiddenBody">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Colorado <span class="hiddenIcon">></span></h3>
+						<div class="hiddenBody">
 							<a href="https://twitter.com/Denver_PSL/"><p>PSL Denver</p></a>
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden2-6'))">Connecticut <span class="hiddenIcon">></span></h3>
-						<div id="hidden2-6" class="hiddenBody">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Connecticut <span class="hiddenIcon">></span></h3>
+						<div class="hiddenBody">
 							<a href="https://www.facebook.com/PSLCT/"><p>PSL New Haven</p></a>
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden2-7'))">Florida <span class="hiddenIcon">></span></h3>
-						<div id="hidden2-7" class="hiddenBody">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Florida <span class="hiddenIcon">></span></h3>
+						<div class="hiddenBody">
 							<a href="https://linktr.ee/pslcgc/"><p>PSL Central Gulf Coast</p></a>
 							<a href="https://twitter.com/PSLTampaBay/"><p>PSL Tampa Bay</p></a>
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden2-8'))">Georgia <span class="hiddenIcon">></span></h3>
-						<div id="hidden2-8" class="hiddenBody">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Georgia <span class="hiddenIcon">></span></h3>
+						<div class="hiddenBody">
 							<a href="https://twitter.com/PSLAtlanta/"><p>PSL Atlanta</p></a>
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden2-9'))">Illinois <span class="hiddenIcon">></span></h3>
-						<div id="hidden2-9" class="hiddenBody">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Illinois <span class="hiddenIcon">></span></h3>
+						<div class="hiddenBody">
 							<a href="https://twitter.com/pslchampaign/"><p>PSL Champaign Urbana</p></a>
 							<a href="https://twitter.com/PSLchicago/"><p>Resource Name</p></a>
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden2-10'))">Indiana <span class="hiddenIcon">></span></h3>
-						<div id="hidden2-10" class="hiddenBody">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Indiana <span class="hiddenIcon">></span></h3>
+						<div class="hiddenBody">
 							<a href="https://twitter.com/PSLIndianapolis/"><p>PSL Indianapolis</p></a>
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden2-11'))">Maryland <span class="hiddenIcon">></span></h3>
-						<div id="hidden2-11" class="hiddenBody">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Maryland <span class="hiddenIcon">></span></h3>
+						<div class="hiddenBody">
 							<a href="https://twitter.com/BaltimorePsl/"><p>PSL Baltimore</p></a>
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden2-12'))">Massachusetts <span class="hiddenIcon">></span></h3>
-						<div id="hidden2-12" class="hiddenBody">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Massachusetts <span class="hiddenIcon">></span></h3>
+						<div class="hiddenBody">
 							<a href="https://linktr.ee/bostonpsl/"><p>PSL Boston</p></a>
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden2-13'))">Michigan <span class="hiddenIcon">></span></h3>
-						<div id="hidden2-13" class="hiddenBody">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Michigan <span class="hiddenIcon">></span></h3>
+						<div class="hiddenBody">
 							<a href="https://twitter.com/RBPPGR/"><p>Royal Black Panther Party Grand Rapids</p></a>
 							<a href="https://twitter.com/PSLdetroit/"><p>PSL Detroit</p></a>
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden2-14'))">Mississippi <span class="hiddenIcon">></span></h3>
-						<div id="hidden2-14" class="hiddenBody">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Mississippi <span class="hiddenIcon">></span></h3>
+						<div class="hiddenBody">
 							<a href="https://cooperationjackson.org/"><p>Cooperation Jackson</p></a>
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden2-15'))">Missouri <span class="hiddenIcon">></span></h3>
-						<div id="hidden2-15" class="hiddenBody">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Missouri <span class="hiddenIcon">></span></h3>
+						<div class="hiddenBody">
 							<a href="https://twitter.com/PSLSpringfield/"><p>PSL Springfield</p></a>
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden2-16'))">New Hampshire <span class="hiddenIcon">></span></h3>
-						<div id="hidden2-16" class="hiddenBody">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">New Hampshire <span class="hiddenIcon">></span></h3>
+						<div class="hiddenBody">
 							<a href="https://twitter.com/PSLsnh/"><p>PSL Southern New Hampshire</p></a>
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden2-17'))">New Mexico <span class="hiddenIcon">></span></h3>
-						<div id="hidden2-17" class="hiddenBody">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">New Mexico <span class="hiddenIcon">></span></h3>
+						<div class="hiddenBody">
 							<a href="https://twitter.com/abqpsl/"><p>PSL Albuquerque</p></a>
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden2-18'))">Texas <span class="hiddenIcon">></span></h3>
-						<div id="hidden2-18" class="hiddenBody">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Texas <span class="hiddenIcon">></span></h3>
+						<div class="hiddenBody">
 							<a href="https://www.egpgunclubcentraltexas.com/"><p>Elmer Geronimo Pratt Gun Club</p></a>
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden2-19'))">Washington DC <span class="hiddenIcon">></span></h3>
-						<div id="hidden2-19" class="hiddenBody">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Washington DC <span class="hiddenIcon">></span></h3>
+						<div class="hiddenBody">
 							<a href="https://blackbodiesforblackpower.com/"><p>Black Bodies For Black Power</p></a>
 							<a href="https://linktr.ee/psldc/"><p>PSL Washington DC</p></a>
 						</div>
