--- a/pages/resources/libraries.html
+++ b/pages/resources/libraries.html
@@ -28,23 +28,23 @@
 		<div class="container">
 			<!-- Hidden container template
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden1'))">Category <span class="hiddenIcon">></span></h2>
-				<div id="hidden1" class="hiddenBody">
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">></span></h2>
+				<div class="hiddenBody">
      					<a href=""><p>Library Name</p></a>
 				</div>
 			</div>
 			-->
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden1'))">Resources for eBooks <span class="hiddenIcon">></span></h2>
-				<div id="hidden1" class="hiddenBody">
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Resources for eBooks <span class="hiddenIcon">></span></h2>
+				<div class="hiddenBody">
      					<a href="https://cloudconvert.com/"><p>Cloudconvert</p></a>
 						<a href="https://calibre-ebook.com/"><p>Calibre</p></a>
 						<a href="https://tinyurl.com/app"><p>Tinyurl</p></a>
 				</div>
 			</div>
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden2'))">Non-Socialist Specific Libraries <span class="hiddenIcon">></span></h2>
-				<div id="hidden2" class="hiddenBody">
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Non-Socialist Specific Libraries <span class="hiddenIcon">></span></h2>
+				<div class="hiddenBody">
 						<a href="https://library.memoryoftheworld.org/"><p>Memory of the World</p></a>
 						<a href="https://www.pdfdrive.com/"><p>PdfDrive</p></a>
 						<a href="https://sci-hub.se/"><p>Sci-Hub</p></a>
@@ -54,8 +54,8 @@
 				</div>
 			</div>
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden3'))">Socialist/Anti-Colonialist Libraries and Archives <span class="hiddenIcon">></span></h2>
-				<div id="hidden3" class="hiddenBody">
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Socialist/Anti-Colonialist Libraries and Archives <span class="hiddenIcon">></span></h2>
+				<div class="hiddenBody">
 						<a href="https://drive.google.com/drive/folders/149Lbsg30Rvo0siM6rCr9I0zZ01hB_yTx/"><p>Black Liberation Google Drive</p></a>
 						<a href="https://blacklivesmatters.carrd.co/"><p>Black Lives Matter Carrd</p></a>
 						<a href="https://www.reddit.com/r/communism101/comments/rzpzwn/help_me_with_reading_list/hrx5vai/"><p>r/communism101 Reading List</p></a>
@@ -81,8 +81,8 @@
 				</div>
 			</div>
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden4'))">Bookstores <span class="hiddenIcon">></span></h2>
-				<div id="hidden4" class="hiddenBody">
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Bookstores <span class="hiddenIcon">></span></h2>
+				<div class="hiddenBody">
      					<a href="https://allpowerbooks.org/"><p>All Power Books</p></a>
 						<a href="https://www.haymarketbooks.org/"><p>Haymarket Books</p></a>
 						<a href="https://massivebookshop.com/"><p>Massive Bookshop</p></a>
@@ -90,8 +90,8 @@
 				</div>
 			</div>
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden5'))">Category <span class="hiddenIcon">></span></h2>
-				<div id="hidden5" class="hiddenBody">
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">></span></h2>
+				<div class="hiddenBody">
      					<a href="https://foreignlanguages.press/"><p>Foreign Language Press</p></a>
 						<a href="https://www.peacelandbread.com/books"><p>Peace, Land, and Bread</p></a>
 				</div>
