--- a/pages/resources/queerres.html
+++ b/pages/resources/queerres.html
@@ -28,21 +28,21 @@
 		<div class="container">
 			<!-- Hidden container template
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden1'))">Category <span class="hiddenIcon">></span></h2>
-				<div id="hidden1" class="hiddenBody">
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">></span></h2>
+				<div class="hiddenBody">
      					<a href=""><p>Resource Name</p></a>
 				</div>
 			</div>
 			-->
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden1'))">Misc Resources <span class="hiddenIcon">></span></h2>
-				<div id="hidden1" class="hiddenBody">
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Misc Resources <span class="hiddenIcon">></span></h2>
+				<div class="hiddenBody">
                     <a href="https://www.lgbtmap.org/equality-maps/equality-maps/"><p>LGBT Equality Maps</p></a>
 				</div>
 			</div>
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden2'))">Trans Rights <span class="hiddenIcon">></span></h2>
-				<div id="hidden2" class="hiddenBody">
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Trans Rights <span class="hiddenIcon">></span></h2>
+				<div class="hiddenBody">
 					<a href="https://www.google.com/maps/d/u/1/viewer?mid=1DxyOTw8dI8n96BHFF2JVUMK7bXsRKtzA&ll=26.19982757169323%2C-113.38234069999999&z=3/"><p>Erin’s Informed Consent HRT Map of The US</p></a>
                     <a href="https://www.transformationsproject.org/"><p>The Trans Formations Project</p></a>
                     <a href="https://www.youtube.com/channel/UCBYlEnfAUbrYSwF0VujcmHA"><p>Trans Voice Lessons Youtube Channel</p></a>
