--- a/pages/resources/news.html
+++ b/pages/resources/news.html
@@ -28,30 +28,30 @@
 		<div class="container">
 			<!-- Hidden container template
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden1'))">Category <span class="hiddenIcon">></span></h2>
-				<div id="hidden1" class="hiddenBody">
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">></span></h2>
+				<div class="hiddenBody">
      					<p><a href="">Resource Name</a> (<a href="">rss</a>)</p>
 				</div>
 			</div>
 			-->
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden1'))">International <span class="hiddenIcon">></span></h2>
-				<div id="hidden1" class="hiddenBody">
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">International <span class="hiddenIcon">></span></h2>
+				<div class="hiddenBody">
 					<p><a href="https://www.democracynow.org/">Democracy Now!</a> (<a href="https://www.democracynow.org/democracynow.rss/">rss</a>)</p>
 					<p><a href="https://internationalmagz.com/">International Magazine</a></p>
 					<p><a href="https://www.liberationnews.org/">Liberation News</a> (<a href="https://www.liberationnews.org/feed/">rss</a>)</p>
 				</div>
 			</div>
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden2'))">Latin America <span class="hiddenIcon">></span></h2>
-				<div id="hidden2" class="hiddenBody">
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Latin America <span class="hiddenIcon">></span></h2>
+				<div class="hiddenBody">
 					<p><a href="https://en.granma.cu/">Granma</a> (<a href="http://en.granma.cu/feed/">rss</a>)</p>
 					<p><a href="https://kawsachunnews.com/">Kawsachun News</a> (<a href="https://kawsachunnews.com/feed">rss</a>)</p>
 				</div>
 			</div>
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden3'))">U.S. <span class="hiddenIcon">></span></h2>
-				<div id="hidden3" class="hiddenBody">
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">U.S. <span class="hiddenIcon">></span></h2>
+				<div class="hiddenBody">
 					<p><a href="https://www.fightbacknews.org/">Fight Back News</a> (<a href="https://www.fightbacknews.org/feed.xml">rss</a>)</p>
 					<p><a href="https://healthliberationnow.com/">Health Liberation Now</a> (<a href="https://healthliberationnow.com/feed/">rss</a>)</p>
 					<p><a href="https://hoodcommunist.org/">Hood Communist</a> (<a href="https://hoodcommunist.org/rss/">rss</a>)</p>
