--- a/pages/resources/socialmedia.html
+++ b/pages/resources/socialmedia.html
@@ -28,38 +28,38 @@
 		<div class="container">
 			<!-- Hidden container template
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden1'))">Category <span class="hiddenIcon">></span></h2>
-				<div id="hidden1" class="hiddenBody">
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">></span></h2>
+				<div class="hiddenBody">
      				<a href=""><p>Resource Name</p></a>
 				</div>
 			</div>
 			-->
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden1'))">Discord <span class="hiddenIcon">></span></h2>
-				<div id="hidden1" class="hiddenBody">
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Discord <span class="hiddenIcon">></span></h2>
+				<div class="hiddenBody">
 					<!-- Hidden subcontainer template
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden1-'))">Category <span class="hiddenIcon">></span></h3>
-						<div id="hidden1-" class="hiddenBody">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">></span></h3>
+						<div class="hiddenBody">
 							<a href=""><p>Resource Name</p></a>
 						</div>
 					</div>
 					-->
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden1-1'))">News <span class="hiddenIcon">></span></h3>
-						<div id="hidden1-1" class="hiddenBody">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">News <span class="hiddenIcon">></span></h3>
+						<div class="hiddenBody">
 							<a href="https://discord.gg/yvkBs7mUGD/"><p>Proletarian Wii News Channel #2</p></a>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden2'))">Facebook <span class="hiddenIcon">></span></h2>
-				<div id="hidden2" class="hiddenBody">
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Facebook <span class="hiddenIcon">></span></h2>
+				<div class="hiddenBody">
 					<!-- Hidden subcontainer template
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden2-'))">Category <span class="hiddenIcon">></span></h3>
-						<div id="hidden2-" class="hiddenBody">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">></span></h3>
+						<div class="hiddenBody">
 							<a href=""><p>Resource Name</p></a>
 						</div>
 					</div>
@@ -68,12 +68,12 @@
 				</div>
 			</div>
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden3'))">Instagram <span class="hiddenIcon">></span></h2>
-				<div id="hidden3" class="hiddenBody">
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Instagram <span class="hiddenIcon">></span></h2>
+				<div class="hiddenBody">
 					<!-- Hidden subcontainer template
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden3-'))">Category <span class="hiddenIcon">></span></h3>
-						<div id="hidden3-" class="hiddenBody">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">></span></h3>
+						<div class="hiddenBody">
 							<a href=""><p>Resource Name</p></a>
 						</div>
 					</div>
@@ -82,12 +82,12 @@
 				</div>
 			</div>
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden4'))">Mastodon <span class="hiddenIcon">></span></h2>
-				<div id="hidden4" class="hiddenBody">
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Mastodon <span class="hiddenIcon">></span></h2>
+				<div class="hiddenBody">
 					<!-- Hidden subcontainer template
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden4-'))">Category <span class="hiddenIcon">></span></h3>
-						<div id="hidden4-" class="hiddenBody">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">></span></h3>
+						<div class="hiddenBody">
 							<a href=""><p>Resource Name</p></a>
 						</div>
 					</div>
@@ -96,12 +96,12 @@
 				</div>
 			</div>
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden5'))">Reddit <span class="hiddenIcon">></span></h2>
-				<div id="hidden5" class="hiddenBody">
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Reddit <span class="hiddenIcon">></span></h2>
+				<div class="hiddenBody">
 					<!-- Hidden subcontainer template
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden5-'))">Category <span class="hiddenIcon">></span></h3>
-						<div id="hidden5-" class="hiddenBody">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">></span></h3>
+						<div class="hiddenBody">
 							<a href="https://www.reddit.com/"><p>Resource Name</p></a>
 						</div>
 					</div>
@@ -142,12 +142,12 @@
 				</div>
 			</div>
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden6'))">Tumblr <span class="hiddenIcon">></span></h2>
-				<div id="hidden6" class="hiddenBody">
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Tumblr <span class="hiddenIcon">></span></h2>
+				<div class="hiddenBody">
 					<!-- Hidden subcontainer template
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden6-'))">Category <span class="hiddenIcon">></span></h3>
-						<div id="hidden6-" class="hiddenBody">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">></span></h3>
+						<div class="hiddenBody">
 							<a href=""><p>Resource Name</p></a>
 						</div>
 					</div>
@@ -156,33 +156,33 @@
 				</div>
 			</div>
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden7'))">Twitter <span class="hiddenIcon">></span></h2>
-				<div id="hidden7" class="hiddenBody">
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Twitter <span class="hiddenIcon">></span></h2>
+				<div class="hiddenBody">
 					<!-- Hidden subcontainer template
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden7-'))">Category <span class="hiddenIcon">></span></h3>
-						<div id="hidden7-" class="hiddenBody">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">></span></h3>
+						<div class="hiddenBody">
 							<a href="https://twitter.com/"><p>Resource Name</p></a>
 						</div>
 					</div>
 					-->
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden7-1'))">Art <span class="hiddenIcon">></span></h3>
-						<div id="hidden7-1" class="hiddenBody">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Art <span class="hiddenIcon">></span></h3>
+						<div class="hiddenBody">
 							<a href="https://twitter.com/communistposter/"><p>@communistposter</p></a>
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden7-2'))">History <span class="hiddenIcon">></span></h3>
-						<div id="hidden7-2" class="hiddenBody">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">History <span class="hiddenIcon">></span></h3>
+						<div class="hiddenBody">
 							<a href="https://twitter.com/leftinthebay"><p>@leftinthebay</p></a>
 							<a href="https://twitter.com/inthespirit"><p>@inthespirit</p></a>
 							<a href="https://twitter.com/blktransarchives"><p>@blktransarchives</p></a>
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden7-3'))">News <span class="hiddenIcon">></span></h3>
-						<div id="hidden7-3" class="hiddenBody">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">News <span class="hiddenIcon">></span></h3>
+						<div class="hiddenBody">
 							<a href="https://twitter.com/theintlmagz"><p>@theintlmagz</p></a>
 							<a href="https://twitter.com/thecadrejournal"><p>@thecadrejournal</p></a>
 							<a href="https://twitter.com/joshuapotash"><p>@joshuapotash</p></a>
@@ -194,8 +194,8 @@
 						</div>
 					</div>
 					<div class="hidden">
-						<h3 class="hiddenHead" onClick="toggleHidden(document.getElementById('hidden7-4'))">Theory <span class="hiddenIcon">></span></h3>
-						<div id="hidden7-4" class="hiddenBody">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Theory <span class="hiddenIcon">></span></h3>
+						<div class="hiddenBody">
 							<a href="https://twitter.com/communistcenter"><p>@communistcenter</p></a>
 							<a href="https://twitter.com/nkrumahquotes"><p>@nkrumahquotes</p></a>
 							<a href="https://twitter.com/muslimahsamiyah"><p>@muslimahsamiyah</p></a>
