--- a/pages/resources/orgs/us.html
+++ b/pages/resources/orgs/us.html
@@ -54,7 +54,7 @@
 				</div>
 			</div>
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="this.nextElementSibling)">By State <span class="hiddenIcon">></span></h2>
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">By State <span class="hiddenIcon">></span></h2>
 				<div class="hiddenBody">
 					<!-- Hidden subcontainer template
 					<div class="hidden">
