--- a/pages/resources/libraries.html
+++ b/pages/resources/libraries.html
@@ -28,14 +28,14 @@
 		<div class="container">
 			<!-- Hidden container template
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">></span></h2>
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">▸</span></h2>
 				<div class="hiddenBody">
      					<a href=""><p>Library Name</p></a>
 				</div>
 			</div>
 			-->
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Resources for eBooks <span class="hiddenIcon">></span></h2>
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Resources for eBooks <span class="hiddenIcon">▸</span></h2>
 				<div class="hiddenBody">
      					<a href="https://cloudconvert.com/"><p>Cloudconvert</p></a>
 						<a href="https://calibre-ebook.com/"><p>Calibre</p></a>
@@ -43,7 +43,7 @@
 				</div>
 			</div>
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Non-Socialist Specific Libraries <span class="hiddenIcon">></span></h2>
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Non-Socialist Specific Libraries <span class="hiddenIcon">▸</span></h2>
 				<div class="hiddenBody">
 						<a href="https://library.memoryoftheworld.org/"><p>Memory of the World</p></a>
 						<a href="https://www.pdfdrive.com/"><p>PdfDrive</p></a>
@@ -54,7 +54,7 @@
 				</div>
 			</div>
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Socialist/Anti-Colonialist Libraries and Archives <span class="hiddenIcon">></span></h2>
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Socialist/Anti-Colonialist Libraries and Archives <span class="hiddenIcon">▸</span></h2>
 				<div class="hiddenBody">
 						<a href="https://drive.google.com/drive/folders/149Lbsg30Rvo0siM6rCr9I0zZ01hB_yTx/"><p>Black Liberation Google Drive</p></a>
 						<a href="https://blacklivesmatters.carrd.co/"><p>Black Lives Matter Carrd</p></a>
@@ -81,7 +81,7 @@
 				</div>
 			</div>
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Bookstores <span class="hiddenIcon">></span></h2>
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Bookstores <span class="hiddenIcon">▸</span></h2>
 				<div class="hiddenBody">
      					<a href="https://allpowerbooks.org/"><p>All Power Books</p></a>
 						<a href="https://www.haymarketbooks.org/"><p>Haymarket Books</p></a>
@@ -90,7 +90,7 @@
 				</div>
 			</div>
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">></span></h2>
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">▸</span></h2>
 				<div class="hiddenBody">
      					<a href="https://foreignlanguages.press/"><p>Foreign Language Press</p></a>
 						<a href="https://www.peacelandbread.com/books"><p>Peace, Land, and Bread</p></a>
