--- a/pages/resources/feministres.html
+++ b/pages/resources/feministres.html
@@ -28,14 +28,14 @@
 		<div class="container">
 			<!-- Hidden container template
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">></span></h2>
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Category <span class="hiddenIcon">▸</span></h2>
 				<div class="hiddenBody">
      					<a href=""><p>Resource Name</p></a>
 				</div>
 			</div>
 			-->
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Reproductive Rights <span class="hiddenIcon">></span></h2>
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Reproductive Rights <span class="hiddenIcon">▸</span></h2>
 				<div class="hiddenBody">
 					<a href="https://abortionafterroe.com/"><p>Abortion After Roe</p></a>
 					<a href="https://docs.google.com/document/d/1w8pg2Bdq2TsCSyMIrWV8dx9rcx4LglKsDHrWwl2vrD4/"><p>Abortion Fundraising Kit</p></a>
@@ -65,7 +65,7 @@
 				</div>
 			</div>
 			<div class="hidden">
-				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Resistance to Violence <span class="hiddenIcon">></span></h2>
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Resistance to Violence <span class="hiddenIcon">▸</span></h2>
 				<div class="hiddenBody">
 					<a href="https://www.interruptingcriminalization.com/survivors/"><p>Interrupting Criminalization</p></a>
 				</div>
