--- a/pages/guides/colonialism.html
+++ b/pages/guides/colonialism.html
@@ -49,7 +49,33 @@
 					<div class="hidden">
 						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Videos <span class="hiddenIcon">▸</span></h2>
 						<div class="hiddenBody">
-     							<a> href="https://www.youtube.com/watch?v=q7sxTnWeQ8s"<p>1. How Race Was Invented</p></a>
+     							<a href="https://www.youtube.com/watch?v=q7sxTnWeQ8s"><p>1. How Race Was Invented</p></a>
+						</div>
+					</div>
+				</div>
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Imperialism <span class="hiddenIcon">▸</span></h2>
+				<div class="hiddenBody">
+     					<p></p>
+					<div class="hidden">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Articles and Pamphlets <span class="hiddenIcon">▸</span></h2>
+						<div class="hiddenBody">
+     							<p>Nothing so far! Please suggest resources if you have any.</p>
+						</div>
+					</div>
+					<div class="hidden">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Books <span class="hiddenIcon">▸</span></h2>
+						<div class="hiddenBody">
+     							<p>1. Imperialism: The Highest Stage of Capitalism</p>
+     							<p>2. Imperialism and Unequal Development</p>
+     							<p>3. Unequal Development: A Study on the Imperialism of Trade</p>
+						</div>
+					</div>
+					<div class="hidden">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Videos <span class="hiddenIcon">▸</span></h2>
+						<div class="hiddenBody">
+     							<a href="https://www.youtube.com/watch?v=4lDZaKjfs4E"><p>1. How Rich Countries Rob the Poor</p></a>
+     							<a href="https://www.youtube.com/watch?v=NrpLPs2FcF8"><p>2. What is Capitalist Imperialism?</p></a>
+     							<a href="https://www.youtube.com/watch?v=xP8CzlFhc14"><p>3. Michael Parenti Lecture on Imperialism</p></a>
 						</div>
 					</div>
 				</div>
