--- a/pages/guides/colonialism.html
+++ b/pages/guides/colonialism.html
@@ -43,7 +43,7 @@
 						<div class="hiddenBody">
      							<p>1. Wretched of The Earth</p>
      							<p>- Frantz Fanon, 316 pages.</p>
-     							<p><a href="https://archive.org/embed/thewretchedoftheearth"></a><p>Text</p></a> | Audio Not Available</p>
+     							<p><a href="https://archive.org/embed/thewretchedoftheearth">Text</a> | Audio Not Available</p>
      							<p>2. How Europe Underdeveloped Africa</p>
      							<p>3. A Dying Colonialism</p>
 						</div>
