--- a/pages/guides/colonialism.html
+++ b/pages/guides/colonialism.html
@@ -41,7 +41,7 @@
 					<div class="hidden">
 						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Books <span class="hiddenIcon">▸</span></h2>
 						<div class="hiddenBody">
-     							<p>1. Wretched of The Earth</p>
+     							<p>1. <strong>Wretched of the Earth</strong></p>
      							<p>- Frantz Fanon, 316 pages.</p>
      							<p><a href="https://archive.org/embed/thewretchedoftheearth">Text</a> | Audio Not Available</p>
      							<p>2. How Europe Underdeveloped Africa</p>
