--- a/pages/guides/colonialism.html
+++ b/pages/guides/colonialism.html
@@ -44,14 +44,20 @@
      							<p>1. <strong>Wretched of the Earth</strong></p>
      							<p>- Frantz Fanon, 316 pages.</p>
      							<p><a href="https://archive.org/embed/thewretchedoftheearth">Text</a> | Audio Not Available</p>
-     							<p>2. How Europe Underdeveloped Africa</p>
-     							<p>3. A Dying Colonialism</p>
+     							<p>2. <strong>How Europe Underdeveloped Africa</strong></p>
+     							<p>- Walter Rodney, 453 pages.</p>
+         						<p><a href="https://archive.org/details/BooksBagHowEuropeUnderdevelopedAfricaByWalterRodney">Text</a> | Audio Not Available</p>
+								<p>3. <strong>A Dying Colonialism</strong></p>
+     							<p>- Frantz Fanon, 92 pages</p>
+     							<p><a href="https://library.memoryoftheworld.org/#/book/087d061e-5758-4bf2-be8a-662efc396508">Text</a> | Audio Not Available</p>
 						</div>
 					</div>
 					<div class="hidden">
 						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Videos <span class="hiddenIcon">▸</span></h2>
 						<div class="hiddenBody">
-     							<a href="https://www.youtube.com/watch?v=q7sxTnWeQ8s"><p>1. How Race Was Invented</p></a>
+								<p>1. <strong>How Race Was Invented</strong></p>
+								<p>- BadEmpanada, 62 minutes.</p>
+								<p><a href "https://www.youtube.com/watch?v=q7sxTnWeQ8s">Youtube</a></p>
 						</div>
 					</div>
 				</div>
@@ -67,9 +73,15 @@
 					<div class="hidden">
 						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Books <span class="hiddenIcon">▸</span></h2>
 						<div class="hiddenBody">
-     							<p>1. Imperialism: The Highest Stage of Capitalism</p>
-     							<p>2. Imperialism and Unequal Development</p>
-     							<p>3. Unequal Development: A Study on the Imperialism of Trade</p>
+     							<p>1. <strong>Imperialism: The Highest Stage of Capitalism</strong></p>
+     							<p>- V.L Lenin, 95 pages.</p>
+     							<p><a href="https://www.marxists.org/archive/lenin/works/1916/imp-hsc/index.htm">Text</a> | Audio Not Available</p>
+     							<p>2. <strong>Imperialism and Unequal Development</strong></p>
+     							<p>- Samir Amin, 146 pages.</p>
+     							<p><a href="https://library.memoryoftheworld.org/#/book/3e75acc6-da0d-4df9-a76f-ab41f7686e6d">Text</a> | Audio Not Available</p>
+     							<p>3. <strong>Unequal Development: A Study on the Imperialism of Trade</strong></p>
+     							<p>- Arghiri Emmanuel, 496 pages.</p>
+     							<p><a href="https://library.memoryoftheworld.org/#/book/746a6e18-b911-4680-be16-d64366a5f703">Text</a> | Audio Not Available</p>
 						</div>
 					</div>
 					<div class="hidden">
@@ -78,8 +90,12 @@
 								<p>1. <strong>How Rich Countries Rob The Poor</strong></p>
 								<p>- Hakim, 18 minutes.</p>
 								<p><a href "https://www.youtube.com/watch?v=4lDZaKjfs4E">Youtube</a></p>
-     							<a href="https://www.youtube.com/watch?v=NrpLPs2FcF8"><p>2. What is Capitalist Imperialism?</p></a>
-     							<a href="https://www.youtube.com/watch?v=xP8CzlFhc14"><p>3. Michael Parenti Lecture on Imperialism</p></a>
+								<p>2. <strong>What is Capitalist Imperialism?</strong></p>
+								<p>- Marxist Paul, 14 minutes.</p>
+								<p><a href "https://www.youtube.com/watch?v=NrpLPs2FcF8">Youtube</a></p>
+								<p>3. <strong>Michael Parenti Lecture on Imperialism</strong></p>
+								<p>- Michael Parenti, 93 minutes.</p>
+								<p><a href "https://www.youtube.com/watch?v=xP8CzlFhc14">Youtube</a></p>
 						</div>
 					</div>
 				</div>
@@ -95,8 +111,12 @@
 					<div class="hidden">
 						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Books <span class="hiddenIcon">▸</span></h2>
 						<div class="hiddenBody">
-     							<p>1. On The National Question</p>
-     							<p>2. The Right of Nations to Self Determination</p>
+     							<p>1. <strong>On the National Question</strong></p>
+     							<p>- Ibrahim Kaypakkaya, 144 pages.</p>
+     							<p><a href="https://foreignlanguages.press/colorful-classics/on-the-national-question-ibrahim-kaypakkaya/">Text</a> | Audio Not Available</p>
+     							<p>2. <strong> The Right of Nations to Self Determination</strong></p>
+     							<p>- V.L Lenin, ? pages.</p>
+     							<p><a href="https://www.marxists.org/archive/lenin/works/1914/self-det/index.htm">Text</a> | Audio Not Available</p>
 						</div>
 					</div>
 					<div class="hidden">
@@ -118,7 +138,9 @@
 					<div class="hidden">
 						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Books <span class="hiddenIcon">▸</span></h2>
 						<div class="hiddenBody">
-     							<p>1. Red Skin, White Masks</p>
+     							<p>1. <strong>Red Skin, White Masks</strong></p>
+     							<p>- Glen Sean Coulthard, 245 pages.</p>
+     							<p><a href="https://libgen.is/book/index.php?md5=B22F728E5F822A7204D0994E7BCD8DE4">Text</a> | Audio Not Available</p>
 						</div>
 					</div>
 					<div class="hidden">
