fixed hidden containers

--- a/pages/guides/colonialism.html
+++ b/pages/guides/colonialism.html
@@ -61,6 +61,8 @@
 						</div>
 					</div>
 				</div>
+			</div>
+			<div class="hidden">
 				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Imperialism <span class="hiddenIcon">▸</span></h2>
 				<div class="hiddenBody">
      					<p></p>
@@ -99,6 +101,8 @@
 						</div>
 					</div>
 				</div>
+			</div>
+			<div class="hidden">
 				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Nationhood <span class="hiddenIcon">▸</span></h2>
 				<div class="hiddenBody">
      					<p></p>
@@ -126,6 +130,8 @@
 						</div>
 					</div>
 				</div>
+			</div>
+			<div class="hidden">
 				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Settler Colonialism <span class="hiddenIcon">▸</span></h2>
 				<div class="hiddenBody">
      					<p></p>
