--- a/pages/guides/colonialism.html
+++ b/pages/guides/colonialism.html
@@ -102,6 +102,30 @@
 					</div>
 				</div>
 			</div>
+				<div class="hidden">
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Indigeneity <span class="hiddenIcon">▸</span></h2>
+				<div class="hiddenBody">
+     					<p></p>
+					<div class="hidden">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Articles and Pamphlets <span class="hiddenIcon">▸</span></h2>
+						<div class="hiddenBody">
+     							<p>Nothing so far! Please suggest resources if you have any.</p>
+						</div>
+					</div>
+					<div class="hidden">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Books <span class="hiddenIcon">▸</span></h2>
+						<div class="hiddenBody">
+     							<p>Nothing so far! Please suggest resources if you have any.</p>
+						</div>
+					</div>
+					<div class="hidden">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Videos <span class="hiddenIcon">▸</span></h2>
+						<div class="hiddenBody">
+							<p>Nothing so far! Please suggest resources if you have any.</p>
+						</div>
+					</div>
+				</div>
+			</div>
 			<div class="hidden">
 				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Nationhood <span class="hiddenIcon">▸</span></h2>
 				<div class="hiddenBody">
